# LinalgBridge

./: CMakeLists.txt  build.sh
lib/: CMakeLists.txt
tools/: CMakeLists.txt  linalgtox-opt.cpp
